Fix bugs that occurred during final test for 3.0 release (#5194)
This PR fixes some bugs that occurred while testing all interactive
demos and examples for the 3.0 release:

- [x] `ui.input_chips`: auto-split demo
    (since #4978)
- [x] `ui.aggrid`: main demo
    (since #5190)
- [x] `ui.aggrid`: selection on "Run row methods" demo
    (since #5190)
- [x] `ui.leaflet`: drawing rectangles fails
    (since #5121)
- [x] `ui.scene`: dragging objects
- [x] `ui.stepper`: layout is broken
- [x] Editable AG Grid example
    (since #4978)
- [x] Editable Table example
    (since #4978)
- [x] Google OAuth example
- [x] Google One Tap example
- [x] OpenCV Webcam example
- [x] SimPy example
- [x] SVG Clock example
    (since #5116)
- [x] Websocket example
- [x] ZeroMQ example

--- a/nicegui/static/nicegui.css
+++ b/nicegui/static/nicegui.css
@@ -54,6 +54,9 @@
   padding: 8px 0 0 0;
   gap: 8px;
 }
+.nicegui-step .q-stepper__step-inner {
+  padding: 0 24px 32px 60px;
+}
 .nicegui-timeline-entry .q-timeline__content {
   padding: 0 0 24px 0;
 }
